--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -2,17 +2,21 @@
 
 
 h1{
-	color: firebrick;
+	color: black;
+	font-weight: bold;
 }
 
 
 h2{
-	color: sienna;
+	color: black;
+	font-weight: bold;
 
 }
 
 h3{
-	color: #E107AB;
+	color: black;
+	font-weight: bold;
+	
 }
 #botonera{
 	color: black;
